gcc/testsuite/rust/rustc/ui/const-generics/min_const_generics/static-reference-array-const-param.rs
#![feature(min_const_generics)]

fn a<const X: &'static [u32]>() {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {
    a::<{&[]}>();
}

